--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "qrcode.react": "^3.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "save-svg-as-png": "^1.4.17",
