--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-transition-group": "^4.4.2",
     "save-svg-as-png": "^1.4.17",
     "web-vitals": "^2.1.4"
   },
